--- a/styles.scss
+++ b/styles.scss
@@ -19,19 +19,20 @@ $theme-night: #1E313D;
 $theme-ground: #416270;
 
 // water secondary 
-$water1: #66A3D6;
+$water1: #48BDF3;
 $water2: #1E6CB2;
 $water3: #184C86;
-$water0: #A5BCD4;
+$water0: #F2F2F2;
 
 // water main
 $theme-water: #dae9f9;
+$theme-watershadow: #C6DFF9;
 $theme-ocean: #051525;
 
 // body colors
 $body-bg: $theme-water;
 $body-color: $theme-ocean;
-$link-color: $theme-yellow;
+$link-color: $theme-night;
 
 // fonts
 $font-family-sans-serif: 'Manrope', sans-serif;
@@ -41,6 +42,16 @@ $presentation-heading-font: 'IBM Plex Serif', serif;
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Manrope:wght@200..800&display=swap');
 
 /*-- scss:rules --*/
+
+/*
+.reveal pre.sourceCode code {
+    color: $water0;
+    background-color: #151123f0;
+    padding: 6px 9px;
+    max-height: 500px;
+    white-space: pre;
+}
+*/
 
 // highlight the text
 .blue {
@@ -61,9 +72,11 @@ section.has-dark-background{
   color: $theme-water;
 }
 
-// .code-with-filename .code-with-filename-file,  .code-with-filename .code-with-filename-file pre{
-//   background-color: $theme-darksand;
-// }
+/*
+.code-with-filename .code-with-filename-file,  .code-with-filename .code-with-filename-file pre{
+background-color: $water1;
+}
+*/
 
 // Output colors
 .watch {
@@ -78,9 +91,13 @@ section.has-dark-background{
   border-radius: 5px;
   margin-bottom: 10px !important;
   box-shadow: 0 20px 47px rgb(0 0 0 / 55%);
-  width: 400px;
+  width: 350px;
   /*margin: auto !important;*/
   
+}
+
+.idk {
+  width: 400px;
 }
 
 .medframe {
@@ -127,4 +144,110 @@ section.has-dark-background{
     
   }
  
+}
+
+.inset-frame {
+  box-shadow: inset -3px -3px 7px #ffffffb2,
+        inset 3px 3px 7px rgba(94, 104, 121, 0.945);
+  width: 500px;
+}
+
+.container {
+    width: 500px;
+    // height: 500px;
+    margin: 5px;
+    background: $theme-water;
+    border-radius: 15px;
+    box-shadow:  inset -3px -3px 7px $theme-watershadow, 
+        inset 3px 3px 7px rgba(94, 104, 121, 0.945);
+}
+
+.window-style {
+  
+  pre > code.sourceCode { white-space: pre; position: relative; }
+pre > code.sourceCode > span { line-height: 1.25; }
+pre > code.sourceCode > span:empty { height: 1.2em; }
+.sourceCode { overflow: visible; }
+code.sourceCode > span { color: inherit; text-decoration: inherit; }
+div.sourceCode { margin: 1em 0; }
+pre.sourceCode { margin: 0; }
+@media screen {
+div.sourceCode { overflow: auto; }
+}
+@media print {
+pre > code.sourceCode { white-space: pre-wrap; }
+}
+pre.numberSource code
+  { counter-reset: source-line 0; }
+pre.numberSource code > span > a:first-child::before
+  { content: counter(source-line);
+    position: relative; text-align: right; vertical-align: baseline;
+    border: none; 
+    -webkit-touch-callout: none; -webkit-user-select: none;
+    -khtml-user-select: none; -moz-user-select: none;
+    -ms-user-select: none; user-select: none;
+    padding: 0 4px; width: 4em;
+    background-color: $water0;
+    color: $theme-ocean;
+  }
+pre.numberSource { color:#bdae9d;}
+div.sourceCode.cell-code
+  { color: $theme-ocean; background-color: $water0; }
+
+  
+  // pre.sourceCode numberSource r number-lines code-with-copy
+
+  
+  code.sourceCode.scss {
+    background-color: $water0;
+    color: $theme-ocean;
+    
+  }
+      code.sourceCode.r {
+      background-color: $water0;
+      color: $theme-ocean;
+    
+  }
+  code.sourceCode.sass {
+    color: $theme-ocean;
+  
+  }
+  
+  a {
+  color: $theme-ocean;
+}
+
+ 
+  code span.cn { 
+    color: $theme-darksand; 
+  } /* Alert */
+  code span.an { 
+    color: #0066ff;
+    font-weight: bold; font-style: italic; 
+  } /* Annotation */
+  code span.co {
+    color: #f8f8f2;
+    font-style: italic;
+  }
+  code a:any-link {
+    color: inherit;
+    text-decoration: none;
+  }
+  code span.ot {
+    color: #00e0e0;
+  }
+  code span.sc {
+    color: #abe338;
+  }
+  code span.fu {
+    color: #ffa07a;
+  }
+  
+  code span.do {
+    color: gold;
+    font-style: italic;
+}
+  
+  
+
 }
